connected labels with calendar

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 python3 -m venv env
 source env/bin/activate
 pip install --upgrade pip
-pip install requests pillow matplotlib
+pip install requests pillow matplotlib tkcalendar
 python3 test.py
 deactivate
