--- a/README
+++ b/README
@@ -5,5 +5,5 @@ python3 -m venv env
 source env/bin/activate
 pip install --upgrade pip
 pip install requests pillow matplotlib tkcalendar
-python3 test.py
+python3 main.py
 deactivate
